src/test/resources/tokens/invalid/integer_out_of_bounds_negative_hex.unpick
unpick v3
const int
    0 = -0x80000001